Updating profile data

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,21 +1,38 @@
 {
-    "welcome": "Welcome",
-    "about": "About Me",
-    "contact": "Contact",
-    "profile": "Profile",
-    "location": "Location",
-    "interests": "Interests",
-    "education": "Education",
-    "work-experience": "Work Experience",
-    "phone": "Phone",
-    "email": "Email",
-    "personal-details": "Personal details",
-    "creative-ideas": "Me dedico a producir ideas creativas y originales para mis clientes",
-    "creative-ideas-description": "", 
-    "profile-description": "",
-    "location-description":"",
-    "skills": "My abilities",
-    "specialize-in": "I specialize in",
-    "preparation-and-experience": "My preparation and experience",
-    "get-in-touch": "Get in touch with me to get to know each other better!"
-  }
+  "welcome": "Welcome",
+  "about": "About Me",
+  "contact": "Contact",
+  "profile": "Profile",
+  "profile-description": "I am a Backend Developer specialized in Python with 4 years of experience in developing robust applications and services. I have experience in:",
+  "apis": "<strong>APIs:</strong> Creating and maintaining RESTful APIs.",
+  "data-bases": "<strong>Databases:</strong> MySQL, MongoDB.",
+  "optimization": "<strong>Optimization:</strong> Designing scalable architectures and optimizing server performance.",
+  "location": "Location",
+  "location-description": "I reside in Monza, Italy. I am open to opportunities that require travel and am also comfortable working remotely, leveraging collaborative tools to maintain optimal communication and productivity. Additionally, I am flexible with hybrid or on-site work arrangements.",
+  "interests":"Interests",
+  "interests-description": "I am passionate about staying updated with the latest technologies and trends in software development. I also enjoy physical activities like trekking, calisthenics, and floor acrobatics, which help me stay fit and relieve stress. For me, programming is not just a profession but a form of art. I love creating elegant and efficient solutions that solve complex problems and improve people's lives.",
+  "education": "Education",
+  "education-degree": "2019 - In progress",
+  "education-degree-description": "I am currently pursuing a Bachelor's Degree in Computer Programming at the University of Quilmes. During my studies, I am building a solid foundation in <b>software development</b>, algorithms, <b>data structures</b>, and <b>design patterns</b>. My education covers both fundamental theory and practical applications in various programming languages and technologies, including the use of design patterns to create more efficient and maintainable solutions. This comprehensive training is preparing me to tackle complex challenges in the field of computer science.",
+  "education-degree-name": "Bachelor's Degree in Computer Programming",
+  "education-coder-description": "In the Backend course with Coderhouse, I learned to develop modern applications with <b>Node.js</b> and <b>MongoDB</b>. I focused on <b>server-side JavaScript</b>, using asynchronous techniques to enhance performance. I acquired skills in service communication, managing distributed processes, and handling large volumes of data. I also prepared for deployment across different web platforms, ensuring scalable and robust solutions. This training has equipped me to build and manage effective backend applications in today's web environment.",
+  "education-coder-name": "Backend Course",
+  "work-experience": "Work Experience",
+  "backend-banza-description": "At <b>Banza</b>, I develop and maintain backend services using <b>Python</b> and <b>FastAPI</b>, continuously optimizing the performance and scalability of the application. I work with <b>AWS Lambda</b> for serverless functions and manage <b>MySQL</b> databases to ensure data integrity. I use <b>Elasticsearch</b> to enhance search and analytics, and <b>Redis</b> to manage caches and improve performance. I implement secure authentication using <b>JWT</b> and conduct testing with <b>Postman</b>. I collaborate with the team using <b>Bitbucket</b> and <b>Git</b> for version control and code management.",
+  "backend-banza-name": "Backend Developer",
+  "backend-leafnoise-description": "As a Backend Developer at <b>Leafnoise</b> for 3 years, I gained solid experience in backend development, working with <b>Python</b> and <b>Flask</b> to create and maintain a robust and scalable application. I learned and applied agile methodologies such as <b>Scrum</b> and project management tools like <b>Jira</b>. I collaborated with national clients, including <b>ANSES</b> and several municipalities, on the creation and maintenance of <b>Moorea</b>, an application for digitizing procedures. This experience allowed me to delve into custom solution implementation. I used <b>MongoDB</b> for managing non-relational data and <b>Docker</b> for containerizing the application, improving portability and consistency.",
+  "backend-leafnoise-name": "Backend Developer",
+  "phone": "Phone",
+  "email": "Email",
+  "personal-details": "Personal Details",
+  "creative-ideas": "I focus on writing clean code by adhering to best programming practices.",
+  "creative-ideas-description": "My name is Agustín Martilotta, and I am a passionate Backend Developer with 4 years of experience creating technological solutions that enhance the efficiency and functionality of businesses. Since a young age, I have had a great fascination with technology and programming, which led me to specialize in Python and develop skills in frameworks such as FastAPI and Flask. I take pride in my ability to solve complex problems and my commitment to continuous improvement.",
+  "skills": "My Skills",
+  "specialize-in": "I specialize in",
+  "preparation-and-experience": "My preparation and experience",
+  "get-in-touch": "Get in touch with me to get to know each other better!",
+  "advanced": "Advanced",
+  "intermediate": "Intermediate",
+  "basic": "Basic",
+  "inter-advanced": "Inter/Advanced"
+}
