--- a/languages/es.json
+++ b/languages/es.json
@@ -1,22 +1,38 @@
 {
-    "welcome": "Bienvenido",
-    "about": "Sobre Mi",
-    "contact": "Contacto",
-    "profile": "Perfil",
-    "location": "Ubicación",
-    "interests": "Intereses",
-    "education": "Educación",
-    "work-experience": "Experiencia Laboral",
-    "phone": "Teléfono",
-    "email": "Correo",
-    "personal-details": "Detalles personales",
-    "creative-ideas": "Me dedico a producir ideas creativas y originales para mis clientes",
-    "creative-ideas-description": "", 
-    "profile-description": "",
-    "location-description":"",
-    "skills": "Mis habilidades",
-    "specialize-in": "Me especializo en",
-    "preparation-and-experience": "Mi preparación y experiencia",
-    "get-in-touch": "Ponte en contacto conmigo para conocernos más!"
-  }
-  
+  "welcome": "Bienvenido",
+  "about": "Sobre Mi",
+  "contact": "Contacto",
+  "profile": "Perfil",
+  "profile-description":"Soy un Backend Developer especializado en Python con 4 años de experiencia en el desarrollo de aplicaciones y servicios robustos. Tengo experiencia en:",
+  "apis":"<strong>APIs:</strong> Creación y mantenimiento de APIs RESTful.",
+  "data-bases":"<strong>Bases de Datos:</strong> MySQL, MongoDB.",
+  "optimization":"<strong>Optimización:</strong> Diseño de arquitecturas escalables y optimización del rendimiento del servidor.",
+  "location": "Ubicación",
+  "location-description": "Resido en Monza, Italia. Estoy abierto a oportunidades que requieran viajar y también me siento cómodo trabajando de forma remota, aprovechando herramientas colaborativas para mantener una comunicación y productividad óptimas. Asimismo, no tengo inconvenientes en trabajar bajo esquemas híbridos o presenciales.",
+  "interests":"Intereses",
+  "interests-description": "Me apasiona estar al tanto de las últimas tecnologías y tendencias en el desarrollo de software. Además, disfruto de actividades físicas como el trekking, la calistenia y la acrobacia de piso, que me ayudan a mantenerme en forma y a liberar el estrés. Para mí, la programación no es solo una profesión, sino una forma de arte. Me encanta crear soluciones elegantes y eficientes que resuelvan problemas complejos y mejoren la vida de las personas.",
+  "education": "Educación",
+  "education-degree":"2019 - In course",
+  "education-degree-description": "Actualmente estoy cursando la Licenciatura en Programación en Informática en la Universidad de Quilmes. Durante mi formación, estoy adquiriendo una sólida base en el <b>desarrollo de software</b>, algoritmos, <b>estructuras de datos</b>, y <b>patrones de diseño</b>. Mi estudio abarca tanto la teoría fundamental como aplicaciones prácticas en diversos lenguajes de programación y tecnologías, incluyendo el uso de patrones de diseño para crear soluciones más eficientes y mantenibles. Esta formación integral me está preparando para enfrentar desafíos complejos en el campo de la informática.",
+  "education-degree-name": "Lic. en Programación en Informática",
+  "education-coder-description":"En el curso de Backend con Coderhouse, aprendí a desarrollar aplicaciones modernas con <b>Node.js</b> y <b>MongoDB</b>. Me enfoqué en <b>JavaScript del lado del servidor</b>, utilizando técnicas asincrónicas para mejorar el rendimiento. Adquirí habilidades en comunicación entre servicios, manejo de procesos distribuidos, y control de grandes volúmenes de datos. También me preparé para el despliegue en distintas plataformas web, asegurando soluciones escalables y robustas. Esta formación me ha preparado para construir y gestionar aplicaciones backend efectivas en el entorno web actual.",
+  "education-coder-name":"Carrera Backend",
+  "work-experience": "Experiencia Laboral",
+  "backend-banza-description":"En <b>Banza</b>, desarrollo y mantengo servicios backend utilizando <b>Python</b> y <b>FastAPI</b>, optimizando continuamente el rendimiento y la escalabilidad de la aplicación. Trabajo con <b>AWS Lambda</b> para funciones sin servidor y gestiono bases de datos <b>MySQL</b> para asegurar la integridad de los datos. Utilizo <b>Elasticsearch</b> para mejorar la búsqueda y el análisis, y <b>Redis</b> para gestionar cachés y acelerar el rendimiento. Implemento autenticación segura mediante <b>JWT</b> y realizo pruebas con <b>Postman</b>. Colaboro con el equipo usando <b>Bitbucket</b> y <b>Git</b> para el control de versiones y la gestión del código.",
+  "backend-banza-name":"Desarrollador Backend",
+  "backend-leafnoise-description":"Como Desarrollador Backend en <b>Leafnoise</b> durante 3 años, adquirí una sólida experiencia en el desarrollo backend, trabajando con <b>Python</b> y <b>Flask</b> para crear y mantener una aplicación robusta y escalable. Aprendí y apliqué metodologías ágiles como <b>Scrum</b> y herramientas de gestión de proyectos como <b>Jira</b>.Colaboré con clientes nacionales, incluyendo <b>ANSES</b> y varios municipios, en la creación y mantenimiento de <b>Moorea</b>, una aplicación para digitalizar trámites. Esta experiencia me permitió profundizar en la implementación de soluciones personalizadas. Utilicé <b>MongoDB</b> para la gestión de datos no relacionales y <b>Docker</b> para la contenedorización de la aplicación, mejorando la portabilidad y consistencia.   ",
+  "backend-leafnoise-name":"Desarrollador Backend",
+  "phone": "Teléfono",
+  "email": "Correo",
+  "personal-details": "Detalles personales",
+  "creative-ideas": "Me dedico a desarrollar codigo limpio utilizando las buenas prácticas de la programación",
+  "creative-ideas-description": "Me llamo Agustín Martilotta, y soy un apasionado Backend Developer con 4 años de experiencia en la creación de soluciones tecnológicas que optimizan la eficiencia y la funcionalidad de las empresas. Desde joven, he tenido una gran fascinación por la tecnología y la programación, lo que me llevó a especializarme en Python y a desarrollar habilidades en frameworks como FastApi y Flask. Me enorgullece mi capacidad para resolver problemas complejos y mi dedicación a la mejora continua.", 
+  "skills": "Mis habilidades",
+  "specialize-in": "Me especializo en",
+  "preparation-and-experience": "Mi preparación y experiencia",
+  "get-in-touch": "Ponte en contacto conmigo para conocernos más!",
+  "advanced":"Avanzado",
+  "intermediate":"Intermedio",
+  "basic":"Básico",
+  "inter-advanced":"Inter/Avanzado"
+}
